package Gui;

public enum State {
	NORMAL,
	SUPER,
	INVISIBLE;
}