@startuml
abstract class PacObject.AbstractCharacter
class Constantes.Constante
class Utilities.Direction
class Utilities.State
class Utilities.Utils
class java.awt.Color
class java.awt.Point
class java.util.ArrayList
class java.util.List
PacObject.AbstractCharacter ..> Constantes.Constante
PacObject.AbstractCharacter ..> Utilities.Direction
PacObject.AbstractCharacter ..> Utilities.State
PacObject.AbstractCharacter ..> Utilities.Utils
PacObject.AbstractCharacter ..> java.awt.Color
PacObject.AbstractCharacter ..> java.awt.Point
PacObject.AbstractCharacter ..> java.util.ArrayList
PacObject.AbstractCharacter ..> java.util.List
@enduml